# kumiko

./: Cargo.toml  plane_backup.lbrn2
Java2Rust/: aminals.java  animals.rs
src/: asanoha.rs  eventail.rs  flower.rs  frame.rs  goma.rs  grid.rs  hexagon.rs  kumiko.rs  lib.rs  main.rs  main.rs0  manip_svg.rs  oglines.rs  operations.rs  svg.rs  triskell.rs  tsumiishi.rs
